# minesweeper

./: .gitignore  CMakeLists.txt  Layout.pub  README.md  Scene construction.drawio  design notes.txt  main.cpp  project notes.md
include/: CMakeLists.txt  board.cpp  board.hpp  definitions.hpp  enums.hpp  eventhandler.cpp  eventhandler.hpp  eventlog.cpp  eventlog.hpp  minesweeper.cpp  minesweeper.hpp  mouseaction.cpp  mouseaction.hpp  tile.cpp  tile.hpp
include/ms/: CMakeLists.txt  board.cpp  board.hpp  definitions.hpp  enums.hpp  eventhandler.cpp  eventhandler.hpp  eventlog.cpp  eventlog.hpp  mouseaction.cpp  mouseaction.hpp  tile.cpp  tile.hpp
include/ui/elements/: CMakeLists.txt  button.hpp  dynamic.cpp  dynamic.hpp  element.cpp  element.hpp  toggle.hpp
